@@ -127,10 +127,6 @@ public class OccupancyManagerTests {
         String roomId = "room1";
 
         CheckInReport report = new CheckInReport(
-                false,
-                true,
-                false,
-                false,
                 Occupancy.LOW
         );
 
@@ -144,11 +140,9 @@ public class OccupancyManagerTests {
         assertTrue(result);
         assertEquals(1, room.getRecords().size());
 
-        OccupancyRecord savedRecord = room.getRecords().get(0);
+        OccupancyRecord savedRecord = room.getRecords().getFirst();
 
         assertEquals(Occupancy.LOW, savedRecord.getOccupancyLevel());
-        assertEquals(true, savedRecord.getWifiIssue());
-        assertEquals(false, savedRecord.getClosed());
 
         verify(repo).save(room);
     }
@@ -171,10 +165,6 @@ public class OccupancyManagerTests {
     void userCheckIn_nulLRoom(){
         String roomId = null;
         CheckInReport report = new CheckInReport(
-                false,
-                true,
-                false,
-                false,
                 Occupancy.LOW
         );
 
@@ -315,7 +305,7 @@ public class OccupancyManagerTests {
 
         assertEquals(roomId, savedHistoricRoom.getId());
         assertEquals(1, savedHistoricRoom.getRecords().size());
-        assertEquals(oldRecord, savedHistoricRoom.getRecords().get(0));
+        assertEquals(oldRecord, savedHistoricRoom.getRecords().getFirst());
 
         // Verify Mongo pull was executed
         verify(mongoTemplate, times(1))
